--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 
 <head>
-    <title>ここに難易度表の名前</title>
+    <title>JURUMA譜面置き場</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +19,7 @@
     <header class="mb-3">
         <nav class="navbar navbar-dark bg-dark">
             <div class="container-fluid">
-                <span class="navbar-brand mb-0 h1">ここに難易度表の名前</span>
+                <span class="navbar-brand mb-0 h1">JURUMA譜面置き場</span>
             </div>
         </nav>
     </header>
@@ -27,10 +27,11 @@
     <div class="container">
 
         <div class="alert alert-success mb-3" role="alert">
-            <p>ここに難易度表の説明文。次期難易度表フォーマット対応。</p>
+            <p>JURUMAが過去に作成した譜面を置いています。難易度表としても使用可能です(URLをコピーしてLR2/beatorajaに読み込ませてください)。</p>
+            <p>基本的に「ストレスのない地力上げ譜面」をコンセプトに作成しています。</p>
             <p>難易度表の読み込みと表示に数秒かかります。</p>
             <hr>
-            <p class="mb-0">説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文</p>
+            <p class="mb-0">難易度はSatellite/Stellaに準拠。</p>
         </div>
 
 
